--- a/package.json
+++ b/package.json
@@ -5,20 +5,20 @@
   "description": "Portfolio",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "^1.x",
-    "autoprefixer": "^9.1.x",
-    "browser-sync": "^2.24.x",
+    "autoprefixer": "^9.4.2",
+    "browser-sync": "^2.26.3",
     "gh-pages": "^2.0.1",
     "gulp": "^4.0.x",
     "gulp-csso": "^3.0.1",
     "gulp-htmlmin": "^5.0.1",
-    "gulp-imagemin": "^4.1.0",
-    "gulp-plumber": "^1.2.x",
+    "gulp-imagemin": "^5.0.3",
+    "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.x",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.x",
     "gulp-uglify": "^3.0.1",
     "gulp-webp": "^3.0.0",
-    "stylelint": "^9.6.x",
+    "stylelint": "^9.9.0",
     "stylelint-config-htmlacademy": "^0.1.x"
   },
   "scripts": {
